<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.myDonation.MyDonationFragment">

    <View
        android:id="@+id/dividerRequestList"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="@+id/dividerRequestReview"
        app:layout_constraintEnd_toEndOf="@+id/requestList"
        app:layout_constraintStart_toStartOf="@+id/requestList" />

    <TextView
        android:id="@+id/textTotalRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/totalRequest"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/requestList"
        app:layout_constraintTop_toBottomOf="@+id/dividerRequestList" />

    <TextView
        android:id="@+id/requestList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/request_list"
        android:textColor="@color/primaryLightColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/requestReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/requestReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_Large"
        android:gravity="center"
        android:text="@string/request_review"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RequestRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textTotalRequests"
        tools:listitem="@layout/request_card">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/dividerRequestReview"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/requestReview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/requestReview"
        app:layout_constraintTop_toBottomOf="@+id/requestReview" />

</androidx.constraintlayout.widget.ConstraintLayout>